--- a/frpc.ini
+++ b/frpc.ini
@@ -8,12 +8,20 @@ local_ip = 127.0.0.1
 local_port = 10086
 remote_port = 10086
 
-[L2TP_500]
+[L2TP 500]
 type = udp
+local_ip = 127.0.0.1
 local_port = 500
 remote_port = 500
 
-[L2TP_4500]
+[L2TP 4500]
 type = udp
+local_ip = 127.0.0.1
 local_port = 4500
 remote_port = 4500
+
+[Microsoft Remote Desktop]
+type = tcp
+local_ip = 192.168.123.233
+local_port = 3389
+remote_port = 3389
