--- a/docker/nginx/conf.d/www.upcacm.club.conf
+++ b/docker/nginx/conf.d/www.upcacm.club.conf
@@ -6,7 +6,7 @@ server
     root /www/www.upcacm.club;
 
     if ($host != 'www.upcacm.club'){
-        rewrite ^(/.*)$ https://www.upcacm.club$1 permanent;
+        rewrite ^(/.*)$ http://www.upcacm.club$1 permanent;
     }
 
     location ~ .*\.(js|css)?$ {
